--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -86,7 +86,17 @@
 
         height: 100%
         border-bottom: 1px solid rgba(255, 255, 255, 0.15)
-
+        &.Selected
+            + .select
+                .select-box__current
+                    cursor: pointer
+                    opacity: 1
+                    pointer-events: auto
+        + .select
+            .select-box__current
+                cursor: not-allowed
+                pointer-events: none
+                opacity: 0.4
         &:nth-child(2)
             .select-box
                 border-right: 0
@@ -184,8 +194,14 @@
         justify-content: space-around
         height: 100%
         width: 100%
-        // margin: 0 7px
         padding: 0 10px
+
+        +sm-block
+            margin: 3.5px 0px
+        +md-block
+            margin: 3.5px 0px
+        +lg-block
+            margin: 3.5px 0px
 
         .selectBoxActionPrice
             font-size: 18px
@@ -210,20 +226,20 @@
     font-size: 14px
     color: #fff
 
-    padding: 0 28px 0 11px
+    // padding: 0 28px 0 11px
 
     margin: 10px 0
 
     +sm-block
-        font-size: 18px
+        // font-size: 18px
         position: relative
 
     +md-block
-        font-size: 18px
+        // font-size: 18px
         position: relative
 
     +lg-block
-        font-size: 18px
+        // font-size: 18px
         position: relative
 
     &__empty
@@ -242,10 +258,18 @@
         align-items: center
         white-space: nowrap
 
-        margin-right: 20px
         min-width: 88px
         width: 100%
         // width: 135px
+
+        justify-content: flex-start
+        padding: 0 7px
+        +sm-block
+            padding: 0 15px
+        +md-block
+            padding: 0 15px
+        +lg-block
+            padding: 0 15px
 
         &:disabled
             cursor: not-allowed
@@ -262,9 +286,17 @@
         display: flex
         position: absolute
         top: 50%
-        right: -15px
+        // right: -15px
+        right: 8px
         transform: translateY(-50%)
         transition: 0.2s ease
+
+        +sm-block
+            right: 15px
+        +md-block
+            right: 15px
+        +lg-block
+            right: 15px
 
     &__value
         display: flex
