--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -341,6 +341,8 @@
         animation-timing-function: step-start
         box-shadow: 0 15px 30px -10px transparentize(#000, 0.9)
         border-radius: 16px
+        border-bottom-left-radius: 0
+        border-bottom-right-radius: 0
 
         // background: #000
         border: 1.5px solid rgba(255, 255, 255, 0.15)
@@ -350,6 +352,7 @@
             left: -12px
             width: calc(100% + 20px)
             height: 200px
+            border-radius: 16px
 
         +md-block
             position: absolute
@@ -357,6 +360,7 @@
             left: -12px
             width: calc(100% + 20px)
             height: 200px
+            border-radius: 16px
 
         +lg-block
             position: absolute
@@ -364,6 +368,7 @@
             left: -12px
             width: calc(100% + 20px)
             height: 200px
+            border-radius: 16px
 
     &__option
         display: block
