--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -73,7 +73,7 @@
     position: relative
     // overflow: hidden
     // max-height: 768px
-  
+
     &.bannerGtr
         padding-bottom: 25%
         +sm-block
@@ -82,7 +82,7 @@
             padding-bottom: 0
         +lg-block
             padding-bottom: 0
-            
+
         .bannerText
             padding-top: 94px
 
@@ -125,7 +125,7 @@
                 display: block
         .bannerText
             padding-top: 100px
-            
+
         .pageText
             padding-left: 4%
         .bannerImgBg
@@ -144,17 +144,17 @@
                 top: 175px
 
         .bannerSelect
-                bottom: -7%
+            bottom: -7%
 
-                +sm-block
-                    top: 82%
+            +sm-block
+                top: 82%
                 +md-block
                     top: 58%
                     left: 52%
                 +lg-block
                     top: 58%
                     left: 52%
-            
+
     &.bannerRs
         padding-bottom: 25%
         +sm-block
@@ -172,7 +172,7 @@
 
         .bannerText
             padding-top: 94px
-            
+
         .bannerImgBg
             +md-block
                 left: 33%
@@ -206,13 +206,13 @@
                 top: 115px
             +lg-block
                 top: 115px
-            
+
         span.block
             display: block
             color: #fff
 
     .pageText
-     
+
         margin-top: 26px
         padding-right: 15px
         margin-bottom: 33px
@@ -220,10 +220,9 @@
         +sm-block
             margin-bottom: 58px
         +md-block
-           width: 50%
+            width: 50%
         +lg-block
-           width: 50%
-
+            width: 50%
 
     .socialIcons
         display: none
@@ -274,7 +273,7 @@
     +sm-block
         padding-top: 12px
         padding-left: 50px
-        
+
     +md-block
         padding-left: 0
         height: 768px
@@ -337,22 +336,52 @@
     //
 
     position: absolute
-    
-   
+
     bottom: 10%
-    z-index: 3
+    z-index: 
 
     width: 90%
     margin: 0 auto
     left: 4%
-
+    &.fixed
+        position: fixed
+        bottom: 0
+        width: 100%
+        left: 0
+        z-index: 100
+        +sm-block
+            left: 90%
+        +md-block
+            left: 90%
+        +lg-block
+            left: 90%
+        .selectBoxText
+            display: none
+        .selectBoxContainer
+            
+            border-bottom-left-radius: 0
+            border-bottom-right-radius: 0
+            +sm-block
+                flex-direction: column
+                width: 10%
+                border-radius: 16px 
+            +md-block
+                flex-direction: column
+                width: 10%
+                border-radius: 16px 
+            +lg-block
+                flex-direction: column
+                width: 10%
+                border-radius: 16px 
+        .selectBoxLink
+            display: none
     +sm-block
-        
+
         left: 50%
         transform: translateX(-50%)
         top: 72%
         width: 100%
-        
+
     +md-block
         top: 68%
         left: 52%
@@ -363,6 +392,7 @@
         left: 52%
         width: 100%
         transform: translateX(-50%)
+
 /*cartDetails*/
 
 
@@ -2989,6 +3019,8 @@ html
         animation-timing-function: step-start
         box-shadow: 0 15px 30px -10px transparentize(#000, 0.9)
         border-radius: 16px
+        border-bottom-left-radius: 0
+        border-bottom-right-radius: 0
 
         // background: #000
         border: 1.5px solid rgba(255, 255, 255, 0.15)
@@ -2998,6 +3030,7 @@ html
             left: -12px
             width: calc(100% + 20px)
             height: 200px
+            border-radius: 16px
 
         +md-block
             position: absolute
@@ -3005,6 +3038,7 @@ html
             left: -12px
             width: calc(100% + 20px)
             height: 200px
+            border-radius: 16px
 
         +lg-block
             position: absolute
@@ -3012,6 +3046,7 @@ html
             left: -12px
             width: calc(100% + 20px)
             height: 200px
+            border-radius: 16px
 
     &__option
         display: block
@@ -3499,6 +3534,224 @@ html
         span
             background: #54CA52
 
+.accomplishments
+    padding: 60px 0
+    position: relative
+    .page__title-h2_small
+        text-align: center
+    .page__title-h3
+        text-align: center
+        font-size: 24px
+        line-height: 30px
+        margin-top: 10px
+        margin-bottom: 3%
+
+        +sm-block
+            font-size: 36px
+            line-height: 59px
+        +md-block
+            font-size: 36px
+            line-height: 59px
+        +lg-block
+            font-size: 36px
+            line-height: 59px
+    &::before, 
+    &::after
+        content: ''
+        transform: translate(-50%, -50%)
+        background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
+        filter: blur(500px)
+        position: absolute
+        width: 0
+        height: 0
+
+        +sm-block
+            width: 497px
+            height: 497px
+        +md-block
+            width: 497px
+            height: 497px
+        +lg-block
+            width: 497px
+            height: 497px
+    &::before
+        bottom: 0
+        +sm-block
+            left: -25%
+        +md-block
+            left: -20%
+        +lg-block
+            left: -20%
+        
+        // bottom: -68%
+       
+    &::after
+        top: 43%
+        +sm-block
+            right: -85%
+        +md-block
+            right: -53%
+        +lg-block
+            right: -53%
+
+.accomplishmentsRowFlex 
+    +row-flex
+    justify-content: center
+
+.accomplishmentsItem
+    +col
+    +size(9)
+    +size-sm(5)
+    +size-md(3.6)
+    +size-lg(3.6)
+
+    text-align: center
+    padding-top: 11%
+    margin-bottom: 3%
+    &:nth-child(odd)
+        .accomplishmentsItemImg
+            +md-block
+                justify-content: flex-end
+                padding-right: 50px
+            +lg-block
+                justify-content: flex-end
+                padding-right: 50px
+    &:nth-child(even)
+        .accomplishmentsItemImg
+            +md-block
+                justify-content: flex-start
+                padding-left: 50px
+            +lg-block
+                justify-content: flex-start
+                padding-left: 50px
+
+.accomplishmentsItemImg
+    display: flex
+    margin-bottom: 50px
+    justify-content: center
+        
+.accomplishmentsItemTitle
+    font-family: #{$SFUIDisplay}-Bold
+    margin-bottom: 16px
+
+    font-size: 18px
+    line-height: 26px
+    +sm-block
+        font-size: 24px
+        line-height: 52px
+    +md-block
+        font-size: 24px
+        line-height: 52px
+    +lg-block
+        font-size: 24px
+        line-height: 52px
+
+.accomplishmentsItemDescription
+    color: #B2B2B2
+    font-size: 15px
+    line-height: 26px
+    letter-spacing: 0.02em
+.appBlock
+    padding: 60px 0 150px
+    .page__title-h3
+        font-size: 36px
+        line-height: 59px
+        margin-top: 2%
+
+.appBlockRowFlex
+    +row-flex
+
+.appBlockContainer
+    position: relative
+    display: flex
+    border-radius: 15px
+    background: #111111
+    backdrop-filter: blur(35px)
+    padding: 20% 5% 2% 8%
+    +sm-block
+        padding: 12% 5%
+    +md-block
+        padding: 6% 5%
+    +lg-block
+        padding: 6% 5%
+.appBlockText
+    +col
+    +size(9)
+    +size-md(4)
+    +size-lg(4)
+
+.appBlockIcons 
+    display: flex
+
+.appBlockDescription
+    margin-top: 32px
+    margin-bottom: 37px
+.appBlockIconsItem 
+    display: flex
+    font-size: 15px
+    line-height: 22px
+    font-family: #{$SFUIDisplay}-Bold
+.appBlockImg
+    position: absolute
+    right: -66px
+    top: -105px
+.appBlockIcon
+    margin-right: 20px
+.carSelector
+    padding: 60px 0 150px
+
+.carSelectorRowFlex
+    +row-flex
+
+.carSelectorContainer
+    position: relative
+    display: flex
+    border-radius: 15px
+    background: #111111
+    backdrop-filter: blur(35px)
+    margin-right: 3%
+
+
+.carSelectorImg
+    position: relative
+    left: -10%
+    top: 16%
+    // width: 76%
+    +size(9)
+    +size-md(7)
+    +size-lg(7)
+    +shift-md-right(-2.2)
+    +shift-lg-right(-2.2)
+
+
+.carSelectorIcons
+    +col
+    +size(9)
+    +size-md(3.5)
+    +size-lg(3.5)
+
+    padding-top: 7%
+    .page__btn
+        margin-top: 8%
+        margin-left: 6%
+        margin-bottom: 2%
+
+.carSelectorIconsItem 
+    display: flex
+    margin-bottom: 6%
+    &__Icon 
+        margin-right: 28px
+    &__Text
+        padding-top: 2%
+
+.carSelectorTextAfter
+    font-family: #{$SFUIDisplay}-Bold
+    font-size: 14px
+    line-height: 59px
+    color: #B2B2B2
+    text-transform: uppercase
+    text-align: center
+
 /*howitwork*/
 .howitwork
     padding: 84px 0
@@ -3831,221 +4084,3 @@ html
     margin-top: 5%
     font-size: 15px
     line-height: 59px
-
-.accomplishments
-    padding: 60px 0
-    position: relative
-    .page__title-h2_small
-        text-align: center
-    .page__title-h3
-        text-align: center
-        font-size: 24px
-        line-height: 30px
-        margin-top: 10px
-        margin-bottom: 3%
-
-        +sm-block
-            font-size: 36px
-            line-height: 59px
-        +md-block
-            font-size: 36px
-            line-height: 59px
-        +lg-block
-            font-size: 36px
-            line-height: 59px
-    &::before, 
-    &::after
-        content: ''
-        transform: translate(-50%, -50%)
-        background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
-        filter: blur(500px)
-        position: absolute
-        width: 0
-        height: 0
-
-        +sm-block
-            width: 497px
-            height: 497px
-        +md-block
-            width: 497px
-            height: 497px
-        +lg-block
-            width: 497px
-            height: 497px
-    &::before
-        bottom: 0
-        +sm-block
-            left: -25%
-        +md-block
-            left: -20%
-        +lg-block
-            left: -20%
-        
-        // bottom: -68%
-       
-    &::after
-        top: 43%
-        +sm-block
-            right: -85%
-        +md-block
-            right: -53%
-        +lg-block
-            right: -53%
-
-.accomplishmentsRowFlex 
-    +row-flex
-    justify-content: center
-
-.accomplishmentsItem
-    +col
-    +size(9)
-    +size-sm(5)
-    +size-md(3.6)
-    +size-lg(3.6)
-
-    text-align: center
-    padding-top: 11%
-    margin-bottom: 3%
-    &:nth-child(odd)
-        .accomplishmentsItemImg
-            +md-block
-                justify-content: flex-end
-                padding-right: 50px
-            +lg-block
-                justify-content: flex-end
-                padding-right: 50px
-    &:nth-child(even)
-        .accomplishmentsItemImg
-            +md-block
-                justify-content: flex-start
-                padding-left: 50px
-            +lg-block
-                justify-content: flex-start
-                padding-left: 50px
-
-.accomplishmentsItemImg
-    display: flex
-    margin-bottom: 50px
-    justify-content: center
-        
-.accomplishmentsItemTitle
-    font-family: #{$SFUIDisplay}-Bold
-    margin-bottom: 16px
-
-    font-size: 18px
-    line-height: 26px
-    +sm-block
-        font-size: 24px
-        line-height: 52px
-    +md-block
-        font-size: 24px
-        line-height: 52px
-    +lg-block
-        font-size: 24px
-        line-height: 52px
-
-.accomplishmentsItemDescription
-    color: #B2B2B2
-    font-size: 15px
-    line-height: 26px
-    letter-spacing: 0.02em
-.appBlock
-    padding: 60px 0 150px
-    .page__title-h3
-        font-size: 36px
-        line-height: 59px
-        margin-top: 2%
-
-.appBlockRowFlex
-    +row-flex
-
-.appBlockContainer
-    position: relative
-    display: flex
-    border-radius: 15px
-    background: #111111
-    backdrop-filter: blur(35px)
-    padding: 20% 5% 2% 8%
-    +sm-block
-        padding: 12% 5%
-    +md-block
-        padding: 6% 5%
-    +lg-block
-        padding: 6% 5%
-.appBlockText
-    +col
-    +size(9)
-    +size-md(4)
-    +size-lg(4)
-
-.appBlockIcons 
-    display: flex
-
-.appBlockDescription
-    margin-top: 32px
-    margin-bottom: 37px
-.appBlockIconsItem 
-    display: flex
-    font-size: 15px
-    line-height: 22px
-    font-family: #{$SFUIDisplay}-Bold
-.appBlockImg
-    position: absolute
-    right: -66px
-    top: -105px
-.appBlockIcon
-    margin-right: 20px
-.carSelector
-    padding: 60px 0 150px
-
-.carSelectorRowFlex
-    +row-flex
-
-.carSelectorContainer
-    position: relative
-    display: flex
-    border-radius: 15px
-    background: #111111
-    backdrop-filter: blur(35px)
-    margin-right: 3%
-
-
-.carSelectorImg
-    position: relative
-    left: -10%
-    top: 16%
-    // width: 76%
-    +size(9)
-    +size-md(7)
-    +size-lg(7)
-    +shift-md-right(-2.2)
-    +shift-lg-right(-2.2)
-
-
-.carSelectorIcons
-    +col
-    +size(9)
-    +size-md(3.5)
-    +size-lg(3.5)
-
-    padding-top: 7%
-    .page__btn
-        margin-top: 8%
-        margin-left: 6%
-        margin-bottom: 2%
-
-.carSelectorIconsItem 
-    display: flex
-    margin-bottom: 6%
-    &__Icon 
-        margin-right: 28px
-    &__Text
-        padding-top: 2%
-
-.carSelectorTextAfter
-    font-family: #{$SFUIDisplay}-Bold
-    font-size: 14px
-    line-height: 59px
-    color: #B2B2B2
-    text-transform: uppercase
-    text-align: center
