--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -71,9 +71,45 @@
 /*banner*/
 .banner
     position: relative
-    // overflow: hidden
-    // max-height: 768px
+    
+    &.bannerRs
+        padding-bottom: 25%
+        +sm-block
+            padding-bottom: 0
+        +md-block
+            padding-bottom: 0
+        +lg-block
+            padding-bottom: 0
 
+        .page__title-h1
+            padding-left: 3%
+
+        .pageText
+            padding-left: 3%
+
+        .bannerText
+            padding-top: 94px
+
+        .bannerImgBg
+            +md-block
+                left: 33%
+
+            +lg-block
+                left: 33%
+
+        .bannerSelect
+            // bottom: -7%
+            bottom: 0
+
+            +sm-block
+                top: 82%
+            +md-block
+                top: 58%
+                // left: 52%
+            +lg-block
+                top: 58%
+                // left: 52%
+                
     &.bannerGtr
         padding-bottom: 25%
         +sm-block
@@ -144,43 +180,7 @@
                 top: 175px
 
         .bannerSelect
-            bottom: -7%
-
-            +sm-block
-                top: 82%
-                +md-block
-                    top: 58%
-                    left: 52%
-                +lg-block
-                    top: 58%
-                    left: 52%
-
-    &.bannerRs
-        padding-bottom: 25%
-        +sm-block
-            padding-bottom: 0
-        +md-block
-            padding-bottom: 0
-        +lg-block
-            padding-bottom: 0
-
-        .page__title-h1
-            padding-left: 3%
-
-        .pageText
-            padding-left: 3%
-
-        .bannerText
-            padding-top: 94px
-
-        .bannerImgBg
-            +md-block
-                left: 33%
-
-            +lg-block
-                left: 33%
-
-        .bannerSelect
+            // top: 98%
             bottom: -7%
 
             +sm-block
@@ -191,6 +191,7 @@
             +lg-block
                 top: 58%
                 left: 52%
+
 
     .page__title-h1
 
@@ -240,6 +241,107 @@
             position: absolute
             bottom: 70px
 
+    .bannerSelect
+        position: absolute
+        bottom: 10%
+        z-index: 100
+
+        width: 90%
+        margin: 0 auto
+        left: 4%
+        +sm-block
+
+            // left: 50%
+            // transform: translateX(-50%)
+            top: 72%
+            width: 100%
+
+        +md-block
+            top: 68%
+            // left: 52%
+            width: 100%
+            // transform: translateX(-50%)
+        +lg-block
+            top: 68%
+            // left: 52%
+            width: 100%
+            // transform: translateX(-50%)
+
+        &.fixed
+            position: fixed
+            bottom: 0
+            width: 100%
+            left: 0
+            +sm-block
+                width: auto
+                left: 100%
+                top: 50%
+                transform: translate(-100%, -50%)
+                height: 20%
+            +md-block
+                width: auto
+                left: 100%
+                top: 50%
+                transform: translate(-100%, -50%)
+                height: 20%
+            +lg-block
+                width: auto
+                left: 100%
+                top: 50%
+                transform: translate(-100%, -50%)
+                height: 20%
+            
+                
+            .selectBoxActionSelected
+
+                +sm-block
+                    flex-direction: column
+                +md-block
+                    flex-direction: column
+                +lg-block
+                    flex-direction: column
+            .selectBoxText
+                display: none
+            
+            .selectBoxContainer
+
+                border-bottom-left-radius: 0
+                border-bottom-right-radius: 0
+                +sm-block
+                    flex-direction: column
+                    border-radius: 16px
+                    padding: 0
+                +md-block
+                    flex-direction: column
+                    border-radius: 16px
+                    padding: 0
+                +lg-block
+                    flex-direction: column
+                    border-radius: 16px
+                    padding: 0
+                .select 
+                    .select-box
+
+                        +sm-block
+                            border-right: 0
+                        +md-block
+                            border-right: 0
+                        +lg-block
+                            border-right: 0
+
+                        &__list
+                            +sm-block
+                                top: 25px
+                            +md-block
+                                top: 25px
+                            +lg-block
+                                top: 25px
+
+            .selectBoxLink
+                display: none
+    
+
+
 .bannerFlexContainer
     display: flex
     flex-wrap: wrap
@@ -255,16 +357,12 @@
     +lg-block
         margin-left: -25px
         margin-right: -25px
-    // align-items: center
 
 .bannerText
     +col()
     +size(9)
     +size-md(6)
     +size-lg(6)
-    // +size-md(3)
-    // +size-lg(2.8)
-    // background: #000
 
     position: relative
     z-index: 1
@@ -330,68 +428,6 @@
         top: 135px
         width: auto
 
-.bannerSelect
-    // position: absolute
-    // top: 63%
-    //
-
-    position: absolute
-
-    bottom: 10%
-    z-index: 
-
-    width: 90%
-    margin: 0 auto
-    left: 4%
-    &.fixed
-        position: fixed
-        bottom: 0
-        width: 100%
-        left: 0
-        z-index: 100
-        +sm-block
-            left: 90%
-        +md-block
-            left: 90%
-        +lg-block
-            left: 90%
-        .selectBoxText
-            display: none
-        .selectBoxContainer
-            
-            border-bottom-left-radius: 0
-            border-bottom-right-radius: 0
-            +sm-block
-                flex-direction: column
-                width: 10%
-                border-radius: 16px 
-            +md-block
-                flex-direction: column
-                width: 10%
-                border-radius: 16px 
-            +lg-block
-                flex-direction: column
-                width: 10%
-                border-radius: 16px 
-        .selectBoxLink
-            display: none
-    +sm-block
-
-        left: 50%
-        transform: translateX(-50%)
-        top: 72%
-        width: 100%
-
-    +md-block
-        top: 68%
-        left: 52%
-        width: 100%
-        transform: translateX(-50%)
-    +lg-block
-        top: 68%
-        left: 52%
-        width: 100%
-        transform: translateX(-50%)
 
 /*cartDetails*/
 
@@ -451,41 +487,6 @@
     text-align: left
     p   
         padding-bottom: 9%
-/*cartForm*/
-
-.cartForm
-    +col
-    +size(9)
-    +size-md(6.2)
-    +size-lg(6.2)
-    border: 1px solid #474747
-    border-radius: 15px
-    padding: 25px 51px
-    .page__input
-        +col
-        +size(9)
-        +size-md(9)
-        +size-lg(9)
-        margin-bottom: 40px
-    
-    .name,
-    .country,
-    .code,
-    .phone,
-    .year
-        +col
-        +size(9)
-        +size-md(9/2)
-        +size-lg(9/2)
-        
-.cartFormRow
-    +row-flex
-
-.cartFormTitle
-    font-family: #{$SFUIDisplay}-Bold
-    font-size: 24px
-    line-height: 59px
-    margin-bottom: 24px
 /*cartProducts*/
 
 .cartProducts
@@ -634,6 +635,41 @@
                 .select-box
                     border-right: none
 
+/*cartForm*/
+
+.cartForm
+    +col
+    +size(9)
+    +size-md(6.2)
+    +size-lg(6.2)
+    border: 1px solid #474747
+    border-radius: 15px
+    padding: 25px 51px
+    .page__input
+        +col
+        +size(9)
+        +size-md(9)
+        +size-lg(9)
+        margin-bottom: 40px
+    
+    .name,
+    .country,
+    .code,
+    .phone,
+    .year
+        +col
+        +size(9)
+        +size-md(9/2)
+        +size-lg(9/2)
+        
+.cartFormRow
+    +row-flex
+
+.cartFormTitle
+    font-family: #{$SFUIDisplay}-Bold
+    font-size: 24px
+    line-height: 59px
+    margin-bottom: 24px
 /*chat*/
 .chat
     display: none
@@ -1377,7 +1413,6 @@ html
     text-decoration: none
     margin: 0 11px
 .headerNavCart
-    +col()
     display: flex
     align-items: center
     +sm-block
@@ -2708,7 +2743,7 @@ html
     margin-top: 2%
 
 .selectBoxContainer
-    position: relative
+    // position: relative
     position: static
 
     display: flex
@@ -2925,6 +2960,7 @@ html
         display: flex
         align-items: center
         justify-content: center
+        height: 100px
 
     &__current
         position: relative
@@ -2962,6 +2998,7 @@ html
 
     &__icon
         display: flex
+        justify-content: center
         position: absolute
         top: 50%
         // right: -15px
@@ -2996,8 +3033,11 @@ html
         position: fixed
         bottom: 0
         left: 0
-        height: 70%
-        max-height: initial
+
+        // margin-left: -28px
+        // left: 0
+        // height: 70%
+        // max-height: initial
         background: #fff
         color: #000
 
@@ -3005,6 +3045,8 @@ html
         z-index: 100
         width: 100%
 
+        // min-height: 88px
+        max-height: 70%
         // max-height: 200px
         overflow: scroll
 
@@ -3026,26 +3068,27 @@ html
         border: 1.5px solid rgba(255, 255, 255, 0.15)
         +sm-block
             position: absolute
-            top: 50px
-            left: -12px
-            width: calc(100% + 20px)
-            height: 200px
+            bottom: auto
+            top: 40px
+            
+            max-height: 200px
             border-radius: 16px
 
         +md-block
             position: absolute
-            top: 50px
-            left: -12px
-            width: calc(100% + 20px)
-            height: 200px
+            bottom: auto
+            top: 40px
+
+
+            max-height: 200px
             border-radius: 16px
 
         +lg-block
             position: absolute
-            top: 50px
-            left: -12px
-            width: calc(100% + 20px)
-            height: 200px
+            bottom: auto
+            top: 40px
+
+            max-height: 200px
             border-radius: 16px
 
     &__option
