--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -30,7 +30,7 @@
     margin-top: 2%
 
 .selectBoxContainer
-    position: relative
+    // position: relative
     position: static
 
     display: flex
@@ -247,6 +247,7 @@
         display: flex
         align-items: center
         justify-content: center
+        height: 100px
 
     &__current
         position: relative
@@ -284,6 +285,7 @@
 
     &__icon
         display: flex
+        justify-content: center
         position: absolute
         top: 50%
         // right: -15px
@@ -318,8 +320,11 @@
         position: fixed
         bottom: 0
         left: 0
-        height: 70%
-        max-height: initial
+
+        // margin-left: -28px
+        // left: 0
+        // height: 70%
+        // max-height: initial
         background: #fff
         color: #000
 
@@ -327,6 +332,8 @@
         z-index: 100
         width: 100%
 
+        // min-height: 88px
+        max-height: 70%
         // max-height: 200px
         overflow: scroll
 
@@ -348,26 +355,27 @@
         border: 1.5px solid rgba(255, 255, 255, 0.15)
         +sm-block
             position: absolute
-            top: 50px
-            left: -12px
-            width: calc(100% + 20px)
-            height: 200px
+            bottom: auto
+            top: 40px
+            
+            max-height: 200px
             border-radius: 16px
 
         +md-block
             position: absolute
-            top: 50px
-            left: -12px
-            width: calc(100% + 20px)
-            height: 200px
+            bottom: auto
+            top: 40px
+
+
+            max-height: 200px
             border-radius: 16px
 
         +lg-block
             position: absolute
-            top: 50px
-            left: -12px
-            width: calc(100% + 20px)
-            height: 200px
+            bottom: auto
+            top: 40px
+
+            max-height: 200px
             border-radius: 16px
 
     &__option
